fix spacing

--- a/src/assets/styles/pages/_chat-interface.scss
+++ b/src/assets/styles/pages/_chat-interface.scss
@@ -507,7 +507,7 @@
 }
 
 .spinner-container {
-  padding: 1rem 2rem 0;
+  padding: 0rem 2rem 1rem;
 }
 
 @media (min-width: 900px) {
